samples/_failures_safe/1761565209_124664_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2712fb5.c: In function ‘main’:
./samples/SAFE/__tmp_b2712fb5.c:137:16: error: missing terminating " character
  137 |         printf("Failed to
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_b2712fb5.c:137:9: error: expected expression at end of input
  137 |         printf("Failed to
      |         ^~~~~~
./samples/SAFE/__tmp_b2712fb5.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2712fb5.c:137:9: error: expected declaration or statement at end of input
